syntax = "proto3";

option go_package = ".;hello";

package main;

message HelloReply{
     string message = 1;
}

message HelloRequest{
     string name =1;
}

service HelloService{
     rpc SomeMethod(HelloRequest)returns (HelloReply);
}
